# Daily-bot

./: .gitignore  Cargo.toml  Documentation.md  LICENSE  README.md  tasks.json  user_preferences.json
data/server_specific/: kick_targets.json  targets_alias.json
docs/: Documentation.md  priority_queue_logging.md
src/: main.rs
src/application/: handlers.rs  mod.rs
src/application/commands/: add_task.rs  edit_task.rs  help.rs  interaction_handlers.rs  list_tasks.rs  mod.rs  remove_task.rs  set_notification_channel.rs  stats.rs  timezone.rs
src/application/domain/: mod.rs  task.rs
src/application/repositories/: json_storage.rs  mod.rs  task_repository.rs
src/application/scheduler/: mod.rs  scheduler_tokio.rs
src/application/services/: config_service.rs  geo_mapping_service.rs  mod.rs  notification_service.rs  task_orchestrator.rs  task_service.rs  timezone_service.rs
src/domain/: mod.rs  repository.rs  scheduler.rs  task.rs
src/domain/entities/: mod.rs  scheduled_task.rs  task.rs  user_preferences.rs
src/domain/repositories/: config_repository.rs  mod.rs  task_repository.rs  task_scheduler_repository.rs  user_preferences_repository.rs
src/domain/value_objects/: mod.rs  weekday_format.rs
src/features/: README.md  guide.md  mod.rs
src/features/server_specific/: interaction_handler.rs  mod.rs  orchestrator.rs
src/infrastructure/: discord_bot.rs  json_storage.rs  mod.rs  scheduler_tokio.rs
src/infrastructure/database/: connection.rs  mod.rs  schema.sql
src/infrastructure/discord_bot/: bot.rs  mod.rs
src/utils/: logger.rs  mod.rs  modal_storage.rs  time_utils.rs
(+48 files in other folders)
