[package]
name = "Daily"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { version = "0.12.4", features = [
    "client",
    "gateway",
    "model",
    "builder",
    "rustls_backend",
    "utils",
    "http"
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
