[package]
name = "Daily"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { version = "0.12.4", features = [
    "client",
    "gateway",
    "model",
    "builder",
    "rustls_backend",
    "utils",
    "http"
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10.4"
fuzzy-matcher = "0.3.7"
async-trait = "0.1.89"
lazy_static = "1.5.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
tokio-rusqlite = "0.7.0"
anyhow = "1.0.100"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
